# allegro-4.2.2-xc

./: CMakeLists.txt  readme.md
cmake/: SourcesList.cmake  process-asm.cmake
demo/: display.h
include/allegro/internal/: aintern.h
include/allegro/platform/: alplatf.h  alwatcom.h
src/: allegro.c
src/misc/: asmcapa.s  asmcapa.txt
